# prompt-optimizer

./: .gitignore  LICENSE  README.md  prompt_optimizer_loop.drawio  pyproject.toml
src/prompt_optimizer/: DataTypes.py  LLMClient.py  Logger.py  MetaPrompt.py  PromptCommon.py  PromptGenerator.py  PromptOptimizer.py  ResultAnalyzer.py  __init__.py
src/prompt_optimizer/templates/: __init__.py  analysis_template.txt  first_prompt_generator_template.txt  no_fluff.txt  prompt-optimization-system-description.xml  rating-schema-instructions.txt
